tests/vrs/interface/parts/readactions_02_wrong_separator_expected.txt
error: expected `;`, found `,`
     --> tests/vrs/interface/parts/readactions_02_wrong_separator.vrs:1:21
      |
    1 |  ReadActions { A -> B,  A -> B; }
      |                      ^ help: add `;` here.
